# smokehill

./: CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  smokehill.cabal  stack.yaml
data/packagedb/: argparse.ipkg  containers.ipkg  edda.ipkg  graphviz.ipkg  grl.ipkg  read.ipkg  test.ipkg  testparse.ipkg
src/: Main.hs  Smokehill.hs  Utils.hs
src/Smokehill/: API.hs  Audit.hs  DVCS.hs  Dependency.hs  IPackage.hs  Idris.hs  Model.hs  Options.hs  PackageConfig.hs  PackageDesc.hs  Settings.hs  URL.hs  Utils.hs
src/Smokehill/IPackage/: Parser.hs
src/Smokehill/PackageConfig/: Utils.hs
src/Smokehill/PackageDesc/: Parser.hs
