name:                smokehill
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/jfdm/smokehill#readme
license:             BSD3
license-file:        LICENSE
author:              Jan de Muijnck-Hughes
maintainer:          j.demuijnckhughes@gmail.com
copyright:           BSD3
category:            Web
build-type:          Simple
cabal-version:       >=1.10

data-dir: data

data-files: packagedb/*.ipkg

executable smokehill
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Smokehill
                     , Smokehill.Dependency
                     , Smokehill.URL
                     , Smokehill.Options
                     , Smokehill.Utils
                     , Smokehill.Model
                     , Smokehill.API
                     , Utils

  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , idris >= 0.12.1
                     , optparse-applicative >= 0.11 && < 0.13
                     , directory >= 1.2.3.0
                     , filepath
                     , process
                     , containers
                     , url
                     , transformers